Disbale google-cloud-sdk (broken output)

--- a/packages.yml
+++ b/packages.yml
@@ -40,6 +40,6 @@ aur:
   - android-sources
   - elm-platform
   # - kubernetes
-  - google-cloud-sdk
+  # - google-cloud-sdk
   - leiningen
   - hipchat
