Update to drone 0.5

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,9 +1,8 @@
-publish:
+pipeline:
   maze-build:
     image: mikkeloscar/maze-build
     repo: https://beta.maze-ci.org/mikkeloscar/maze
 
-publish:
   maze-publish:
     image: mikkeloscar/maze-publish
     url: https://beta.maze-ci.org
